--- a/layout.html
+++ b/layout.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <title>RESPONSIVE LAYOUT</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="layout.css">
 </head>
@@ -20,7 +22,7 @@
 <main class="main">
     <p>MAIN</p>
   </main>
-<aside class="aside">
+<aside class="right">
     <p>ASIDE</p>
   <aside>
 </section>
