--- a/layout.html
+++ b/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>RESPONSIVE LAYOUT</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
